trunk/Archive2/1a/e5e8d166455e45/output
main.cpp: In constructor 'Derived::Derived(std::vector<float>)':
main.cpp:20:37: error: class 'Derived' does not have any field named 'protectedElement'
     Derived(std::vector<float> v) : protectedElement(v)
                                     ^
